Updated the openapi spec
